<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<!--
	Adapted by Peter Kuterna to support the Devoxx conference.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Devoxx 2010</string>
    
    <string name="description_logo">Devoxx 2010</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="description_email">E-Mail</string>
    <string name="description_publish">Publish</string>

    <string name="title_now_playing">Now playing</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_speaker_detail">Speaker detail</string>
    <string name="title_notes">Notes</string>
    <string name="title_note_edit">Edit note</string>
    <string name="title_note_create">Create note</string>
    <string name="title_map">Map</string>
    <string name="title_starred">Starred</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_new_sessions">New sessions</string>
    <string name="title_changed_starred_sessions">Changed starred sessions</string>
    <string name="title_myschedule">MySchedule registration</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="menu_myschedule_settings">MySchedule</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="settings_sync">Syncing</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_visualizations">Visualizations</string>
	<string name="settings_sync_only_wifi">Only on WiFi</string>
	<string name="settings_sync_only_wifi_summary_on">Active</string>
	<string name="settings_sync_only_wifi_summary_off">Inactive</string>
	<string name="settings_notify_new_sessions">New sessions</string>
	<string name="settings_notify_changed_starred_sessions">Changed starred</string>
	<string name="settings_visualize_parallel_starred_sessions">Parallel starred</string>
	<string name="settings_visualize_parallel_starred_sessions_summary">Highlight starred sessions that occur at the same time in the starred session overview.</string>

    <string name="title_session_tracks">Session tracks</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_map">Map</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_speakers">Speakers</string>
    <string name="btn_notes">My Notes</string>
    <string name="btn_myschedule_clear">Clear data</string>
    <string name="btn_myschedule_register">Register</string>

    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>

    <string name="speaker_bio">Bio</string>
    <string name="speaker_sessions">Presentations</string>

    <string name="title_share">Share using</string>

    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \'<xliff:g id="query">%1$s</xliff:g>\'</string>

    <string name="empty_speakers">No speakers found</string>
    <string name="empty_sessions">No sessions found</string>
    <string name="empty_session_detail">No session details found</string>
    <string name="empty_notes">No notes found</string>

    <string name="session_summary">Summary</string>
    <string name="session_notes">Notes</string>
    <string name="session_parallel">In parallel</string>
    <string name="session_experience">Experience</string>
    <string name="session_type">Type</string>
    <string name="session_note">Note</string>
    <string name="session_speakers">Speakers</string>

    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>

    <string name="starred_sessions">Sessions</string>
    <string name="starred_speakers">Speakers</string>

    <string name="map_map">Map</string>
    <string name="map_ground">Ground floor</string>
    <string name="map_talks">Talks floor</string>

    <string name="myschedule_info">Register yourself with the Devoxx MySchedule and get your schedule in your inbox or publish it on the Devoxx wiki.</string>
    <string name="myschedule_enter_code">Enter the activation code that was e-mailed to the provided e-mail address to complete the Devoxx MySchedule registration.</string>
    <string name="myschedule_firstname">First name</string>
    <string name="myschedule_lastname">Last name</string>
    <string name="myschedule_email">E-mail</string>
    <string name="myschedule_activationcode">Activation code</string>
    <string name="myschedule_registration_message">Registrating...</string>
    <string name="myschedule_registration_ok">Successfully registered. Check e-mail for activation code.</string>
    <string name="myschedule_registration_nok">Could not complete registration.</string>
    <string name="myschedule_email_message">Sending favorites...</string>
    <string name="myschedule_email_ok">Favorites send. Check your inbox for your MySchedule.</string>
    <string name="myschedule_email_nok">Could not send favorites for email delivery.</string>
    <string name="myschedule_publish_message">Publishing favorites...</string>
    <string name="myschedule_publish_ok">Favorites published. Check your MySchedule page on the Devoxx Schedules wiki.</string>
    <string name="myschedule_publish_nok">Could not publish favorites.</string>

    <string name="myschedule_email_title">Email MySchedule?</string>
    <string name="myschedule_publish_title">Publish MySchedule?</string>
    <string name="myschedule_email_confirm">Do you want to email your Devoxx MySchedule?</string>
    <string name="myschedule_publish_confirm">Do you want to publish your Devoxx MySchedule?</string>
    
    <string name="search_sessions">Sessions</string>
    <string name="search_speakers">Speakers</string>

    <string name="search_label">Devoxx</string>
    <string name="search_hint">Search keywords</string>

    <string name="share_template">Checking out \'<xliff:g id="title">%1$s</xliff:g>\' at #devoxx</string>
    <string name="share_notes">Exported notes from Devoxx 2010</string>

    <string name="note_save">Save</string>
    <string name="note_cancel">Cancel</string>

    <string name="note_create">Create new note</string>
    <string name="note_hint">Enter note</string>

    <string name="note_delete_title">Delete note?</string>
    <string name="note_cancel_title">Cancel note?</string>
    <string name="note_delete_confirm">Are you sure you want to delete this note?</string>
    <string name="note_cancel_confirm">Are you sure you want to cancel this note, not saving any modifications?</string>
    
    <string name="note_goto_session">Show session</string>
    <string name="note_delete">Delete note</string>

    <string name="note_before"><xliff:g id="time">%1$s</xliff:g> before session</string>
    <string name="note_into"><xliff:g id="time">%1$s</xliff:g> into session</string>
    <string name="note_after"><xliff:g id="time">%1$s</xliff:g> after session</string>

    <string name="now_playing_loading">Looking up nearby sessions\u2026</string>
    <string name="now_playing_no_results">No sessions nearby.</string>
    <string name="now_playing_enable_wifi">Tap here to enable Wi-Fi for indoor location.</string>

    <plurals name="now_playing_countdown">
        <item quantity="zero"><xliff:g id="remaining_time">%2$s</xliff:g></item>
        <item quantity="one"><xliff:g id="number_of_days">%1$s</xliff:g> day, <xliff:g id="remaining_time">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="number_of_days">%1$s</xliff:g> days, <xliff:g id="remaining_time">%2$s</xliff:g></item>
    </plurals>

    <string name="now_playing_before_subtitle">Countdown to Devoxx!</string>
    <string name="now_playing_after_title">See you next year!</string>
    <string name="now_playing_after_subtitle">Thanks for tuning in.</string>
    
    <string name="about_text1">Based on the Google I/O 2010 Schedule application, which was released under the Apache 2.0 license.</string>
    <string name="about_text2">Source code modified for the Devoxx 2010 Java Community Conference by:</string>
    <string name="about_text3">Peter Kuterna\r\npeter.kuterna@gmail.com\r\nhttp://twitter.com/peterkuterna</string>
    <string name="about_text4">Source code available at http://code.google.com/p/devoxx2010</string>
    <string name="about_text5">Version %s</string>

    <string name="permission_write">Modify Devoxx schedule data</string>

</resources>
